Fixed overflow

--- a/client/src/styles/watch.scss
+++ b/client/src/styles/watch.scss
@@ -12,7 +12,7 @@
   left: 20px;
   display: block;
   overflow-x: hidden;
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 
 #watch{
